# steamos-time-guardian

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: notification-validation-trigger
.github/workflows/: ci.yml  finalize-notification-fix.yml  validate-notification-fix.yml
config/: config.example.json  schema.json
decky-plugin/: README.md  main.py  package-lock.json  package.json  plugin.json  tsconfig.json
decky-plugin/scripts/: build.mjs
decky-plugin/src/: globals.d.ts  index.tsx
decky-plugin/tests/: plugin-smoke.mjs
desktop-ui/: steamos-time-guardian.desktop
docs/: api.md  architecture-comparison.md  architecture.md  configuration.md  installation.md  limitations.md  local-validation-report.md  resource-usage.md  security-model.md  sources.md  steam-deck-validation-2026-07-22.md  steam-deck-validation-plan.md  testing.md  troubleshooting.md
docs/decisions/: 0001-python-service.md  0002-unix-socket-json-rpc.md  0003-sqlite-wal.md  0004-optional-decky-hybrid.md  0005-ranked-game-detection.md  0006-safe-enforcement.md  0007-xdg-home-persistence.md  0008-user-service-privileges.md  README.md
packaging/: steamos-time-guardian
scripts/: bootstrap-dev.sh  build.sh  common.sh  diagnose.sh  format.sh  install-user.sh  lint.sh  package.sh  smoke-test.sh  start-dev.sh  status.sh  test.sh  uninstall-user.sh
systemd/: steamos-time-guardian.service
tests/: __init__.py  helpers.py
tests/fixtures/: gameprocess_log.txt
tests/integration/: test_ipc_service.py  test_restart_recovery.py
tests/unit/: test_config.py  test_enforcement.py  test_engine.py  test_i18n.py  test_notifications.py  test_schedule.py  test_steam_log_detector.py  (+2 more)
tools/: format_repo.py  lint_repo.py  measure-resources.sh  package_project.py  steam_deck_simulator.py  support_bundle.py
(+24 files in other folders)
